--- a/Images2WavefrontObj/UI/Imgages2WavefrontObj.ui
+++ b/Images2WavefrontObj/UI/Imgages2WavefrontObj.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>694</height>
+    <height>828</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,13 +20,13 @@
       <x>60</x>
       <y>50</y>
       <width>581</width>
-      <height>411</height>
+      <height>681</height>
      </rect>
     </property>
     <widget class="QPushButton" name="loadImagesButton">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>50</x>
        <y>30</y>
        <width>75</width>
        <height>23</height>
@@ -39,17 +39,17 @@
     <widget class="QListWidget" name="listImagesWidget">
      <property name="geometry">
       <rect>
-       <x>130</x>
+       <x>140</x>
        <y>30</y>
        <width>256</width>
-       <height>192</height>
+       <height>121</height>
       </rect>
      </property>
     </widget>
     <widget class="QPushButton" name="deleteImageButton">
      <property name="geometry">
       <rect>
-       <x>400</x>
+       <x>410</x>
        <y>30</y>
        <width>75</width>
        <height>23</height>
@@ -59,12 +59,31 @@
       <string>Delete Image</string>
      </property>
     </widget>
+    <widget class="QLabel" name="imageLabel">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>180</y>
+       <width>491</width>
+       <height>491</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
    </widget>
    <widget class="QPushButton" name="quitButton">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>620</y>
+      <y>750</y>
       <width>75</width>
       <height>23</height>
      </rect>
