--- a/Images2WavefrontObj/UI/Imgages2WavefrontObj.ui
+++ b/Images2WavefrontObj/UI/Imgages2WavefrontObj.ui
@@ -23,7 +23,7 @@
       <height>681</height>
      </rect>
     </property>
-    <widget class="QPushButton" name="loadImagesButton">
+    <widget class="QPushButton" name="addImagesButton">
      <property name="geometry">
       <rect>
        <x>50</x>
@@ -33,7 +33,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Load Images</string>
+      <string>Add Images</string>
      </property>
     </widget>
     <widget class="QListWidget" name="listImagesWidget">
@@ -41,16 +41,16 @@
       <rect>
        <x>140</x>
        <y>30</y>
-       <width>256</width>
-       <height>121</height>
+       <width>271</width>
+       <height>131</height>
       </rect>
      </property>
     </widget>
     <widget class="QPushButton" name="deleteImageButton">
      <property name="geometry">
       <rect>
-       <x>410</x>
-       <y>30</y>
+       <x>50</x>
+       <y>60</y>
        <width>75</width>
        <height>23</height>
       </rect>
@@ -63,9 +63,9 @@
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>180</y>
+       <y>220</y>
        <width>491</width>
-       <height>491</height>
+       <height>451</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -76,6 +76,35 @@
      </property>
      <property name="scaledContents">
       <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxScaleImages">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>180</y>
+       <width>131</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Scale Displayed Images</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="loadSelectedImagesButton">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>180</y>
+       <width>121</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Load Selected Images</string>
      </property>
     </widget>
    </widget>
