--- a/Images2WavefrontObj/UI/Imgages2WavefrontObj.ui
+++ b/Images2WavefrontObj/UI/Imgages2WavefrontObj.ui
@@ -45,6 +45,9 @@
        <height>131</height>
       </rect>
      </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::ExtendedSelection</enum>
+     </property>
     </widget>
     <widget class="QPushButton" name="deleteImageButton">
      <property name="geometry">
